--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
+
           <li class="nav-item active">
             <a class="nav-link" href="#">Introducción <span class="sr-only">(current)</span></a>
           </li>
@@ -38,8 +39,8 @@
           <li class="nav-item">
             <a class="nav-link disabled" href="#">Beneficios Nutricionales</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Contáctenos</a>
+          <li class="nav-item active">
+            <a class="nav-link" href="/paginas/contactenos.html">Contáctenos</a>
           </li>
         </ul>
 
