--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a class="nav-link" href="#">Introducción <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Productos</a>
+            <a class="nav-link" href="/paginas/productos.html">Productos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="#">Beneficios Nutricionales</a>
