--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
           <li class="nav-item active">
             <a class="nav-link" href="#">Introducción <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="paginas/productos.html">Productos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="#">Beneficios Nutricionales</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="/paginas/contactenos.html">Contáctenos</a>
+            <a class="nav-link" href="paginas/contactenos.html">Contáctenos</a>
           </li>
         </ul>
 
