--- a/paginas/contactenos.html
+++ b/paginas/contactenos.html
@@ -5,17 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contactenos</title>
     <link rel="icon" href="/imagenes/icono.png">
 
     <title>Del Fruktas</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
-
-    <!-- Custom styles for this template -->
-    <link href="/css/carousel.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet" >
 
 
 </head>
@@ -60,7 +56,7 @@
             <div class="row">
                 <div class="col">
 
-                    <FORM ACTION="enviar_email.php" METHOD="post">
+                    <form action="enviar_email.php" method="POST">
                         <H1 id="Cont">Formulario de contacto</H1>
                         <hr>
 
@@ -72,13 +68,13 @@
                         <br>
                         <INPUT type="reset" value="Borrar"> <INPUT type="submit" value="Enviar">
 
-                    </FORM>
-
+                    </form>
                     </aside>
                 </div>
                 <div class="col-md-auto">
                     <fieldset>
                         <legend>Ubicanos</legend>
+                        <hr>
                         <h2 class="featurette-heading">Direccion<span class="text-muted"></span></h2>
                         <p class="lead">Estamos ubicados en Av. Jhon F. Kennedy</p>
                         <h3 class="featurette-heading">Telefonos <span class="text-muted"></span></h3>
@@ -94,9 +90,9 @@
     </main>
     <hr>
     <footer class="container">
-            <p class="float-right"><a href="#">Regresar</a></p>
-            <p>&copy; 2016-2018 Empresa-Cafetería.</a></p>
-          </footer>
+        <p class="float-right"><a href="#">Regresar</a></p>
+        <p>&copy; 2016-2018 Empresa-Cafetería.</a></p>
+    </footer>
 </body>
 
 </html>
