--- a/ARQUITECTURA-WEB-master/index.html
+++ b/ARQUITECTURA-WEB-master/index.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="paginas/productos.html">Productos</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link disabled" href="paginas/Beneficios Nutricionales.html">Beneficios Nutricionales</a>
+            <a class="nav-link disabled" href="paginas/Beneficios.html">Beneficios Nutricionales</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="paginas/contactenos.html">Contáctenos</a>
